@@ -1,3 +1,8 @@
+2011-05-08  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* dirlist.c (do_dirlist1, dirlist): better unified source
+	(main): options -i and -z
+
 2010-06-02  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* dirlist.c (main): output now via tino_io
